Updated main_page_function to display all images in the table with a link to vote for them

--- a/html_templates/image_snippet.html
+++ b/html_templates/image_snippet.html
@@ -1,4 +1,5 @@
 <img src='{image}' alt='S3 Image' style='width:300px;height:auto;'/><br>
-<a href = "{apiEndpoint}?imageHash={imageHash}" target=""_self">
+<a href = "{apiEndpoint}?ImageHash={imageHash}" target=""_self">
     <button type=""button">Vote on this image</button>
 </a>
+{imagesBegin}
