Fix issue where content is cut off
Fixed an issue where having several images on the page lead to the top
of the page to be cut off.

Signed-off-by: Jacob Guillemette <NinteMars@proton.me>

--- a/html_templates/main_page.html
+++ b/html_templates/main_page.html
@@ -8,13 +8,16 @@
         html, body {
             height: 100%;
             margin: 0;
-            display: flex;
+            display: block;
             justify-content: center;
             align-items: center;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
         
         #content {
             text-align: center;
+            min-height: 100vh;
         }
         
         h1 {
@@ -27,8 +30,11 @@
         }
 
         .vote-div {
-            margin-top: 20px;
-            margin-bottom: 20px;
+            width: 300px;
+            margin: 10px auto;
+            padding: 10px;
+            box-sizing: border-box;
+            text-align: center;
         }
     </style>
 </head>
