--- a/html_templates/image_snippet.html
+++ b/html_templates/image_snippet.html
@@ -1,7 +1,7 @@
 <div class="vote-div">
 <img src='{image}' alt='S3 Image' style='width:300px;height:auto;'/><br>
-<a href = "{apiEndpoint}?ImageHash={ImageHash}" target=""_self">
-    <button type=""button">Vote on this image</button>
+<a href = "{apiEndpoint}?ImageHash={imageHash}" target=""_self">
+    <button type="button">Vote on this image</button>
 </a>
 </div>
 {imagesBegin}
