--- a/html_templates/image_snippet.html
+++ b/html_templates/image_snippet.html
@@ -1,5 +1,5 @@
 <img src='{image}' alt='S3 Image' style='width:300px;height:auto;'/><br>
-<a href = "{apiEndpoint}?ImageHash={imageHash}" target=""_self">
+<a href = "{apiEndpoint}?ImageHash={ImageHash}" target=""_self">
     <button type=""button">Vote on this image</button>
 </a>
 {imagesBegin}
